--- a/AK-Site/src/styles/main.css
+++ b/AK-Site/src/styles/main.css
@@ -5,6 +5,7 @@
 @import './components/cards.css';
 @import './components/forms.css';
 @import './components/animations.css';
+@import './components/contactbar.css';
 @import './layout/hero.css';
 @import './layout/sections.css';
 @import './layout/responsive.css';
